app/src/ui/svpervnder/collections/larskristo_hellheads/details-modal/DetailsModal.module.scss
@import "src/theme/base";
@import "src/ui/typography/variables";

.details-modal {
  display: block;

  &__header {
    &--row {
      @include atLargeTablet {
        display: flex;

        > div {
          display: flex;
          flex-direction: column;
          justify-content: center;
          margin-right: $space-default;
        }
      }
    }

    &--token-id {
      @include atLargeTablet {
        margin-bottom: 0;
      }
      margin-bottom: $space-default;
    }
  }

  &__img-container {
    @include atLargeTablet {
      padding-top: 0;
    }
    margin-bottom: $space-default;
    padding-top: $space-default;

    img {
      width: 100%;
      border-radius: $border-radius;
    }
  }

  &__price-card,
  &__details-card,
  &__author-card,
  &__forge-card {
    margin-bottom: $space-default;
  }

  &__details-card {
    &--row {
      display: flex;
      justify-content: space-between;
    }
  }

  &__forge-card {
    &--row {
      @include atLargeTablet {
        margin-bottom: $space-s;
      }
      display: flex;
      justify-content: space-between;

      &:not(:last-child) {
        margin-bottom: $space-ml;
      }

      &-price {
        @include atLargeTablet {
          padding: 0;
        }
        padding: $space-default;
      }

      &-price,
      &-button {
        display: block;
      }

      > div {
        display: flex;
        flex-direction: column;
        justify-content: center;
      }

      &-img {
        img {
          width: 100%;
          height: auto;
          border-radius: $border-radius;
        }
      }

      &-details {
        @include atLargeTablet {
          justify-content: start;
        }
        display: flex;
        justify-content: space-between;

        p {
          margin-right: $space-m;
        }
      }
    }
  }

  &__set-for-sale {
    display: block;

    &--form {
      position: relative;

      &-price-field {
        padding-right: 80px !important;
        font-size: $font-size-text-lead;

        &::placeholder {
          font-size: $font-size-text-lead;
        }
      }

      &-currency {
        position: absolute;
        top: 7px;
        right: $space-default;
        z-index: $z-index-content;
      }
    }

    &--info {
      border-radius: $border-radius;
      padding: $space-default;
      text-align: center;
      background-color: var(--color-background);
    }
  }

  &__price-block {
    display: flex;
    justify-content: space-between;

    &--success {
      padding: $space-default;
      text-align: center;
      color: var(--color-background);
      background-color: var(--color-background);

      &-setTokenForSale {
        margin-top: $space-default;
      }
    }

    &--connect-wallet {
      margin-bottom: $space-default;
    }

    &--buy-now {
      display: block;
    }

    &--price {
      margin-top: 0;
      color: var(--color-typography-text);

      span {
        @include font-properties($typography-text);
        color: var(--color-typography-description);
      }
    }

    &--owner-pill {
      text-align: right;

      span {
        color: var(--color-typography-description);
      }

      a {
        color: var(--color-typography-text);
      }
    }
  }

  &__actions {
    &--buy-now-buttons {
      @include atLargeTablet {
        flex-direction: row;
      }
      flex-direction: column;
      justify-content: start;

      a {
        @include atLargeTablet {
          width: auto;
          margin-bottom: 0 !important;
        }
        width: 100%;
        margin-right: $space-default;

        &:not(:last-child) {
          margin-bottom: $space-default;
        }
      }
    }
  }
}

